--- a/source/layouts/_navbar.haml
+++ b/source/layouts/_navbar.haml
@@ -3,7 +3,7 @@
     .pull-left
       -#= link_to root_app_path do
       = link_to 'http://brandymint.com/' do
-        = image_tag "#{root_app_path}images/logo.svg", alt: :logo, class: 'navbar-brand-logo'
+        %img{ src: "#{root_app_path}images/logo.svg", alt: :logo, class: 'navbar-brand-logo'}
 
     .navbar-collapse.collapse
       %ul.nav.navbar-nav.pull-right
