--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,11 +4,9 @@ body_class: index
 ---
 
 .container.main-container{:role => "container"}
-  %div.events-list{ role: 'events-list'}
   %h1 Header
   %p content
 
-.container-fluid.container.grid-items-container
-  .row.grid-items{ role: "grid-items"}
+.container
+  .shows-list{ role: 'index-container' }
 
-.grid-item-block{ role: 'grid-item-thumb'}
